--- a/_site.yml
+++ b/_site.yml
@@ -10,3 +10,6 @@ navbar:
           href: temp.html
         - text: "About"
           href: about.html
+output:
+  html_document:
+    theme: cosmo
